fix scroll issue on ie

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,7 @@ html, body{
   padding: 0;
   font-family: $mainFont;
   box-sizing: border-box;
+  overflow: scroll;
 }
 a{
   color: $inactiveColor;
